[package]
name = "a2ui-iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Iced Elm-architecture GUI backend for A2UI (Agent to UI)"

[features]
default = []
# Pull in the real Iced runtime (wgpu renderer + winit windowing backend). OFF
# by default so the workspace's default build stays light (iced brings wgpu +
# winit). Enable with `--features backend`.
#
# The feature set mirrors the workspace `iced` dep: `wgpu` (GPU renderer),
# `tiny-skia` (software fallback), `thread-pool` (the native futures executor
# iced requires), and `x11`/`wayland` (Linux display servers). Nothing extra is
# needed here — the windowing/render backends all come from the workspace dep.
#
# `a2ui-image` resolves + decodes `Image` component sources (http / data: /
# file://) shared with the other backends; it rides on the `backend` feature so
# enabling the runtime also enables real image rendering.
backend = ["dep:iced", "dep:a2ui-image"]

[dependencies]
a2ui-base = { workspace = true }
serde_json = { workspace = true }
# Optional: the Iced runtime. The `backend` feature is the single switch that
# links the wgpu + winit stack. `default-features = false` keeps the surface
# minimal when the feature is off.
iced = { workspace = true, optional = true }
# Optional: shared image source resolution (http / data: / file:// → bytes)
# for the `Image` component, mirroring the other backends. The crate-local
# `fetch_handle` hands the resolved bytes straight to Iced's lazy-decoding
# `image::Handle`. Gated on `backend`.
a2ui-image = { workspace = true, optional = true }

[dev-dependencies]
# Examples read live values out of the data model and render them with Iced
# widgets directly. `a2ui-tui` provides `build_basic_catalog`; `iced` is the
# optional runtime dep made available to examples via the `backend` feature.
# The extra `canvas` feature pulls in `iced::widget::canvas` for the radar
# sweep in `17_scifi_hud` (it is off in the workspace's lean default set).
a2ui-tui = { workspace = true }
iced = { workspace = true, features = ["canvas"] }

[[example]]
name = "17_scifi_hud"
# Needs the real Iced runtime (wgpu + winit) to open a window.
required-features = ["backend"]

[[example]]
name = "08_agent_chat"
# Needs the real Iced runtime (wgpu + winit) to open a window.
required-features = ["backend"]

[lints]
workspace = true
