[package]
name = "a2ui-slint-gallery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2UI gallery application (Slint backend)"

[[bin]]
name = "a2ui_slint_gallery"
path = "src/main.rs"

[dependencies]
a2ui-core = { workspace = true }
a2ui-tui = { workspace = true }          # build_basic_catalog / build_minimal_catalog
a2ui-gallery = { workspace = true }      # sample_loader
# The `backend` feature enables the Slint windowing backend (winit + software
# renderer). Without it `SurfaceHost::run` has no window to show, so it is
# required for this binary to actually display anything.
a2ui-slint = { workspace = true, features = ["backend"] }
serde_json = { workspace = true }
